[gd_scene load_steps=48 format=3 uid="uid://b47fuk0jye516"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_xxnqr"]
[ext_resource type="Texture2D" uid="uid://b54bnapith86m" path="res://Sprites/Backgrounds/background1.png" id="2_1ntaf"]
[ext_resource type="Texture2D" uid="uid://tgtkf6h1mqot" path="res://Sprites/Phone Icons/Messages_Black.png" id="2_ns2lm"]
[ext_resource type="Texture2D" uid="uid://c85jv3k4pdwk8" path="res://Sprites/Backgrounds/nebula x 3.png" id="3_8dgwr"]
[ext_resource type="Texture2D" uid="uid://dqhb2a67wwfs5" path="res://Sprites/Backgrounds/background2.png" id="3_780h6"]
[ext_resource type="Script" path="res://Scripts/home_button.gd" id="3_jjvcb"]
[ext_resource type="Texture2D" uid="uid://njty358hkrv3" path="res://Sprites/Backgrounds/background3.png" id="4_l5fpe"]
[ext_resource type="Texture2D" uid="uid://cv17bsh3y4bkb" path="res://Sprites/Phone Icons/Settings_Black.png" id="8_7p2if"]
[ext_resource type="FontFile" uid="uid://bxlj2f2wpqtnm" path="res://Fonts/JetBrainsMono-Regular.ttf" id="8_l0qok"]
[ext_resource type="Script" path="res://Scripts/clock.gd" id="9_vnhes"]
[ext_resource type="Texture2D" uid="uid://c1r1uaj4v6sxm" path="res://Sprites/Phone Icons/arrow_icon.png" id="11_kn8bs"]
[ext_resource type="Texture2D" uid="uid://bs3supo3hoxkc" path="res://Sprites/Phone Icons/circle.png" id="11_pn4ao"]
[ext_resource type="Texture2D" uid="uid://dob88ikk0ml2n" path="res://Sprites/Phone Icons/default_icon.png" id="12_4j8am"]
[ext_resource type="Script" path="res://Scenes/settings_app.gd" id="12_nl63e"]
[ext_resource type="FontFile" uid="uid://cibsxxsrx3g1d" path="res://Sprites/JetBrainsMono-ExtraBold.ttf" id="12_sopt0"]
[ext_resource type="Texture2D" uid="uid://bkybbl05022hv" path="res://Sprites/Phone Icons/status_bar_battery_nine_tenth.png" id="13_3t8on"]
[ext_resource type="Script" path="res://Scripts/message_app.gd" id="13_go8dl"]
[ext_resource type="Texture2D" uid="uid://c8su2xqo5v720" path="res://Sprites/Phone Icons/wifi_icon.png" id="14_3pgis"]
[ext_resource type="FontFile" uid="uid://ckwhai1gakb0q" path="res://Fonts/JetBrainsMono-ExtraBold.ttf" id="14_23rvy"]
[ext_resource type="FontFile" uid="uid://bybensx3b36an" path="res://Fonts/Aller_Rg.ttf" id="14_jpf0o"]
[ext_resource type="Texture2D" uid="uid://cvyeyi00xgidk" path="res://Sprites/Backgrounds/background.png" id="15_4rq8l"]
[ext_resource type="Texture2D" uid="uid://bf5kvjlvln7a0" path="res://Sprites/Phone Icons/cellular_data_icon.png" id="15_s4sei"]
[ext_resource type="Script" path="res://Scripts/BackButton.gd" id="16_uple7"]
[ext_resource type="PackedScene" uid="uid://b08yqjl5kn4es" path="res://Scenes/message_window.tscn" id="23_lkw0s"]
[ext_resource type="Script" path="res://Scenes/settings_close.gd" id="24_mw1bk"]
[ext_resource type="FontFile" uid="uid://brmfvf3bae7kr" path="res://Fonts/Metropolis-Regular.otf" id="25_5p67u"]
[ext_resource type="Texture2D" uid="uid://b73plmtq0a02g" path="res://Sprites/Phone Icons/UI ICONS_WHITE_pixel art_Sprite Sheet.png" id="25_qyfgx"]
[ext_resource type="Texture2D" uid="uid://clfcqb66l4reh" path="res://Sprites/Phone Icons/volume_icon_2.png" id="26_i62km"]
[ext_resource type="Texture2D" uid="uid://c27dyv46nlawi" path="res://Sprites/Phone Icons/volume_icon_0.png" id="27_44jwx"]
[ext_resource type="AudioStream" uid="uid://b4l0c06p4uroh" path="res://Audio/2_Day_1_Master.ogg" id="28_e160h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dhcrp"]
radius = 26.5

[sub_resource type="Gradient" id="Gradient_h1xbq"]
colors = PackedColorArray(0.744972, 0.827724, 0.961445, 1, 0.813775, 0.746558, 0.724463, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_51l8p"]
gradient = SubResource("Gradient_h1xbq")

[sub_resource type="LabelSettings" id="LabelSettings_ka14s"]
line_spacing = 0.0
font = ExtResource("14_23rvy")
font_size = 30
font_color = Color(1, 1, 1, 0.941176)
shadow_color = Color(0, 0, 0, 0.360784)

[sub_resource type="LabelSettings" id="LabelSettings_ggwpj"]
line_spacing = 0.0
font = ExtResource("8_l0qok")
font_size = 9
shadow_color = Color(0, 0, 0, 0.215686)
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_vlnft"]
line_spacing = 0.0
font = ExtResource("25_5p67u")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_2nthg"]
font = ExtResource("14_23rvy")
font_size = 10
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.364706)
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_st6go"]
bg_color = Color(0, 0, 0, 0.784314)
shadow_color = Color(0, 0, 0, 0.0823529)
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x6r4y"]
line_spacing = 0.0
font = ExtResource("14_jpf0o")
font_size = 6
shadow_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_su478"]
bg_color = Color(0.188235, 0.188235, 0.188235, 0.905882)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_4sg4c"]
line_spacing = 0.0
font = ExtResource("25_5p67u")
font_size = 10
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.337255)
shadow_offset = Vector2(2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pt5tc"]
line_spacing = 0.0
font = ExtResource("25_5p67u")
font_size = 9

[sub_resource type="LabelSettings" id="LabelSettings_onk6h"]
font = ExtResource("12_sopt0")
font_size = 11
outline_size = 4
outline_color = Color(0, 0, 0, 0.466667)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.705882)

[sub_resource type="Animation" id="Animation_bqbyt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Screen/Home/GridContainer/TextureRectMessage/MessageCount:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_rh70v"]
resource_name = "home_new_msg"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Screen/Home/GridContainer/TextureRectMessage/MessageCount:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dpybu"]
resource_name = "new_game_fade_in"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 1),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w30hy"]
_data = {
"RESET": SubResource("Animation_bqbyt"),
"home_new_msg": SubResource("Animation_rh70v"),
"new_game_fade_in": SubResource("Animation_dpybu")
}

[node name="Game" type="Node2D"]
scale = Vector2(3, 2.85714)
script = ExtResource("1_xxnqr")

[node name="Phone" type="TextureRect" parent="."]
offset_left = -84.0
offset_top = -172.0
offset_right = 307.0
offset_bottom = 639.0
scale = Vector2(0.431448, 0.431448)
texture = ExtResource("15_4rq8l")

[node name="Area2D" type="Area2D" parent="Phone"]
position = Vector2(195.466, 761.274)
script = ExtResource("3_jjvcb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Phone/Area2D"]
position = Vector2(3.05176e-05, -6.10352e-05)
shape = SubResource("CircleShape2D_dhcrp")

[node name="BackgroundStars" type="CanvasLayer" parent="."]
layer = -2

[node name="TextureRect" type="TextureRect" parent="BackgroundStars"]
self_modulate = Color(1, 1, 1, 0.184314)
anchors_preset = -1
anchor_left = -1.45333
anchor_top = -0.72963
anchor_right = 2.30222
anchor_bottom = 2.00741
offset_left = -33.0
offset_top = -22.0
offset_right = 22.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8dgwr")
expand_mode = 1
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -6)

[node name="Screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -78.0
offset_top = -137.0
offset_right = 78.0
offset_bottom = 137.0

[node name="Home" type="MarginContainer" parent="Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HomeWallpaper" type="Node2D" parent="Screen/Home"]

[node name="Sprite2D" type="Sprite2D" parent="Screen/Home/HomeWallpaper"]
self_modulate = Color(1, 1, 1, 0.501961)
position = Vector2(78.1667, 136.975)
scale = Vector2(0.242188, 0.427735)
texture = SubResource("GradientTexture1D_51l8p")

[node name="BG1" type="Sprite2D" parent="Screen/Home/HomeWallpaper"]
position = Vector2(78.1667, 136.975)
scale = Vector2(0.242188, 0.427735)
texture = ExtResource("2_1ntaf")

[node name="BG2" type="Sprite2D" parent="Screen/Home/HomeWallpaper"]
position = Vector2(78.1667, 136.975)
scale = Vector2(0.242188, 0.427735)
texture = ExtResource("3_780h6")

[node name="BG3" type="Sprite2D" parent="Screen/Home/HomeWallpaper"]
position = Vector2(78.1667, 136.975)
scale = Vector2(0.242188, 0.427735)
texture = ExtResource("4_l5fpe")

[node name="Clock" type="Label" parent="Screen/Home"]
layout_mode = 2
size_flags_vertical = 1
text = "time"
label_settings = SubResource("LabelSettings_ka14s")
horizontal_alignment = 1
script = ExtResource("9_vnhes")

[node name="Timer" type="Timer" parent="Screen/Home/Clock"]
wait_time = 60.0
autostart = true

[node name="Label2" type="Label" parent="Screen/Home"]
layout_mode = 2
size_flags_vertical = 1
text = "


Wednesday
Nov 15th, 2023"
label_settings = SubResource("LabelSettings_ggwpj")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Screen/Home"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 30
columns = 2

[node name="TextureRectPhone" type="TextureRect" parent="Screen/Home/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Settings"
mouse_default_cursor_shape = 2
texture = ExtResource("8_7p2if")
expand_mode = 1
script = ExtResource("12_nl63e")
metadata/button = "phone"

[node name="Label2" type="Label" parent="Screen/Home/GridContainer/TextureRectPhone"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -9.39993
offset_bottom = -0.399929
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_vlnft")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRectMessage4" type="TextureRect" parent="Screen/Home/GridContainer/TextureRectPhone"]
modulate = Color(0, 0, 0, 0.196078)
show_behind_parent = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = 1.66667
offset_top = 1.6
offset_right = 51.6667
offset_bottom = 51.6
texture = ExtResource("2_ns2lm")
expand_mode = 1

[node name="TextureRectMessage" type="TextureRect" parent="Screen/Home/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Messages"
mouse_default_cursor_shape = 2
texture = ExtResource("2_ns2lm")
expand_mode = 1
script = ExtResource("13_go8dl")
metadata/button = "message"

[node name="Label" type="Label" parent="Screen/Home/GridContainer/TextureRectMessage"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -9.0
offset_bottom = -1.0
grow_horizontal = 2
text = "Messages"
label_settings = SubResource("LabelSettings_vlnft")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRectMessage2" type="TextureRect" parent="Screen/Home/GridContainer/TextureRectMessage"]
modulate = Color(0, 0, 0, 0.196078)
show_behind_parent = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = 1.66667
offset_top = 3.19993
offset_right = 51.6667
offset_bottom = 53.1999
texture = ExtResource("2_ns2lm")
expand_mode = 1

[node name="MessageCount" type="TextureRect" parent="Screen/Home/GridContainer/TextureRectMessage"]
self_modulate = Color(1, 0.152941, 0.105882, 1)
layout_mode = 0
offset_left = 35.0
offset_top = -0.999908
offset_right = 49.0
offset_bottom = 13.0
texture = ExtResource("11_pn4ao")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Screen/Home/GridContainer/TextureRectMessage/MessageCount"]
modulate = Color(0, 0, 0, 0.180392)
show_behind_parent = true
layout_mode = 0
offset_left = 0.333328
offset_top = 1.39999
offset_right = 14.3333
offset_bottom = 15.4
texture = ExtResource("11_pn4ao")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="Screen/Home/GridContainer/TextureRectMessage/MessageCount"]
layout_mode = 0
offset_left = -0.333344
offset_top = -1.39999
offset_right = 13.6667
offset_bottom = 15.6
text = "1"
label_settings = SubResource("LabelSettings_2nthg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Messages" type="Control" parent="Screen"]
visible = false
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessagesWallpaper" type="Sprite2D" parent="Screen/Messages"]
z_index = -1
position = Vector2(78, 137.35)
scale = Vector2(0.617188, 276.5)
texture = SubResource("GradientTexture1D_51l8p")

[node name="TopBar" type="Panel" parent="Screen/Messages"]
z_index = -1
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
offset_right = 156.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_st6go")

[node name="Label" type="Label" parent="Screen/Messages/TopBar"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
offset_left = 2.0
offset_top = 20.0
offset_right = 154.0
offset_bottom = 31.0
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.313726)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("14_jpf0o")
theme_override_font_sizes/font_size = 6
text = "2 People"
label_settings = SubResource("LabelSettings_x6r4y")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="BackButton" type="Control" parent="Screen/Messages/TopBar"]
custom_minimum_size = Vector2(20, 0)
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 24.0
offset_bottom = 27.0
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
script = ExtResource("16_uple7")

[node name="ArrowIcon" type="Sprite2D" parent="Screen/Messages/TopBar/BackButton"]
position = Vector2(8.89258, 11.1995)
rotation = -1.57079
scale = Vector2(0.0223673, 0.0223673)
texture = ExtResource("11_kn8bs")

[node name="ArrowIcon2" type="Sprite2D" parent="Screen/Messages/TopBar/BackButton/ArrowIcon"]
self_modulate = Color(0, 0, 0, 0.392157)
show_behind_parent = true
position = Vector2(-46.9436, 59.6108)
texture = ExtResource("11_kn8bs")

[node name="DefaultIcon" type="Sprite2D" parent="Screen/Messages/TopBar"]
position = Vector2(72.0002, 10.9999)
scale = Vector2(0.037037, 0.0388889)
texture = ExtResource("12_4j8am")

[node name="DefaultIcon2" type="Sprite2D" parent="Screen/Messages/TopBar"]
position = Vector2(85.9985, 12.3999)
scale = Vector2(0.0296296, 0.0311111)
texture = ExtResource("12_4j8am")

[node name="StatusBarBatteryNineTenth" type="Sprite2D" parent="Screen/Messages/TopBar"]
position = Vector2(146.333, 6.73738)
scale = Vector2(0.197531, 0.228999)
texture = ExtResource("13_3t8on")

[node name="WifiIcon" type="Sprite2D" parent="Screen/Messages/TopBar"]
position = Vector2(135.667, 6.79993)
scale = Vector2(0.0313726, 0.0329412)
texture = ExtResource("14_3pgis")

[node name="CellularDataIcon" type="Sprite2D" parent="Screen/Messages/TopBar"]
position = Vector2(127.667, 6.79993)
scale = Vector2(0.0266667, 0.028)
texture = ExtResource("15_s4sei")

[node name="MessageWindow" parent="Screen/Messages" instance=ExtResource("23_lkw0s")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.113
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -0.0750008
offset_right = 0.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
metadata/_edit_use_anchors_ = true

[node name="Settings" type="Control" parent="Screen"]
visible = false
anchors_preset = 0
offset_right = 156.0
offset_bottom = 275.0
mouse_force_pass_scroll_events = false

[node name="Panel" type="Panel" parent="Screen/Settings"]
layout_mode = 2
offset_left = 8.0
offset_top = 7.0
offset_right = 148.0
offset_bottom = 267.0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_su478")

[node name="Control" type="Control" parent="Screen/Settings/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0
offset_top = -2.0
offset_right = 3.0
offset_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 8
script = ExtResource("24_mw1bk")

[node name="Sprite2D" type="Sprite2D" parent="Screen/Settings/Panel"]
position = Vector2(134, 5.74989)
scale = Vector2(0.15, 0.15)
texture = ExtResource("25_qyfgx")
region_enabled = true
region_rect = Rect2(1032, 144, 104, 96)

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/Settings"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = 10.9999
offset_right = 60.0
offset_bottom = -1.00015
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Label2" type="Label" parent="Screen/Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Click to toggle music"
label_settings = SubResource("LabelSettings_4sg4c")
horizontal_alignment = 1

[node name="MusicToggle" type="CheckButton" parent="Screen/Settings/VBoxContainer"]
texture_filter = 3
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
tooltip_text = "Turn Music On/Off"
mouse_default_cursor_shape = 2
theme_override_icons/checked = ExtResource("26_i62km")
theme_override_icons/unchecked = ExtResource("27_44jwx")
button_pressed = true
alignment = 1
icon_alignment = 1

[node name="Label" type="Label" parent="Screen/Settings/VBoxContainer"]
layout_mode = 2
text = "How To Play:

Click to select any object on the phone that has a way to interact. You will know something can be interacted with if the mouse cursor turns into a hand.

If you are playing on mobile, tap the objects on the phone screen.

The majority of the game takes place within the messages app, which is the one on the bottom right. Try clicking it now and see what happens."
label_settings = SubResource("LabelSettings_pt5tc")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label" type="Label" parent="."]
offset_left = -150.0
offset_top = -191.8
offset_right = 150.0
offset_bottom = -173.8
text = "ENG1021: Genre 2 Draft"
label_settings = SubResource("LabelSettings_onk6h")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w30hy")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_e160h")
volume_db = -29.046
autoplay = true

[connection signal="clicked" from="Phone/Area2D" to="." method="_change_screen" binds= [1]]
[connection signal="mouse_entered" from="Phone/Area2D" to="Phone/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Phone/Area2D" to="Phone/Area2D" method="_on_mouse_exited"]
[connection signal="timeout" from="Screen/Home/Clock/Timer" to="Screen/Home/Clock" method="_on_timer_timeout"]
[connection signal="clicked" from="Screen/Home/GridContainer/TextureRectPhone" to="." method="_on_settings_click"]
[connection signal="clicked" from="Screen/Home/GridContainer/TextureRectMessage" to="." method="_change_screen" binds= [2]]
[connection signal="clicked" from="Screen/Messages/TopBar/BackButton" to="." method="_change_screen" binds= [1]]
[connection signal="clicked" from="Screen/Settings/Panel/Control" to="." method="_on_control_clicked"]
[connection signal="toggled" from="Screen/Settings/VBoxContainer/MusicToggle" to="." method="_on_music_toggle_toggled"]
